--- a/_notebooks/2023-03-16-AP-unit2-4b.ipynb
+++ b/_notebooks/2023-03-16-AP-unit2-4b.ipynb
@@ -335,7 +335,7 @@
    "source": [
     "# Menu Interface to CRUD operations\n",
     "> CRUD and Schema interactions from one location by running menu. Observe input at the top of VSCode, observe output underneath code cell.\n",
-    "- Why does the menu repeat?\n",
+    "- Why does the menu repeat? -- the menu repeats because there is recursion; the method calls itself within the actual method. The \n",
     "- Could you refactor this menu?  Make it work with a List?"
    ]
   },
@@ -346,35 +346,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1, 'Thomas Edison', 'toby', 'sha256$YnutldwtdKeuDLNg$683f6f933bee913bd97dbc487a1f29e39e4203e49d8c10ab81b6b2a45bb17119', '1847-02-11')\n",
-      "(2, 'Nikola Tesla', 'niko', 'sha256$4e45ELX8bMZ46pkr$41fe21a301c86d158691d0fbc3878303c7cf8c10b49e54a46cd33c49301fd17d', '2023-03-15')\n",
-      "(3, 'Alexander Graham Bell', 'lex', 'sha256$cHKh2ZVqdqSRoBbx$31ada3addcd1604e55728c6003c34a6126601a3745443b869f7e249c621d8405', '2023-03-15')\n",
-      "(4, 'Eli Whitney', 'whit', 'sha256$W148lda1rZv0iHgd$10388e75cc86a508ae83cba1c963145ffa81daa6ad64721c80a80b82f35de7e8', '2023-03-15')\n",
-      "(5, 'Indiana Jones', 'indi', 'sha256$CjCWYu5oyfuPuAqV$b279a8f403567470e25c67ecdf2cb4baaa58f1906f3b86cc15ada2642d6d4456', '1920-10-21')\n",
-      "(6, 'Marion Ravenwood', 'raven', 'sha256$YMJAJQmEnhGEFKBG$4ddc1c823f808f55586b520d5f7e17ccefbbbd9e7b11e31c76b243ac4cbf58bf', '1921-10-21')\n",
-      "(7, 'ekam', 'ekm', 'sha256$ylbg84cxQufRxZoF$e975cbca25bd3d16b94a9791627910fea7bda9dd803bb33e36ad289c067db193', '2006-05-04')\n",
-      "(8, 'mark', '', '', '')\n",
-      "(9, 'George Washington', 'wash', 'gothackednewpassword123', '1778-04-03')\n",
-      "(1, 'Thomas Edison', 'toby', 'sha256$YnutldwtdKeuDLNg$683f6f933bee913bd97dbc487a1f29e39e4203e49d8c10ab81b6b2a45bb17119', '1847-02-11')\n",
-      "(2, 'Nikola Tesla', 'niko', 'sha256$4e45ELX8bMZ46pkr$41fe21a301c86d158691d0fbc3878303c7cf8c10b49e54a46cd33c49301fd17d', '2023-03-15')\n",
-      "(3, 'Alexander Graham Bell', 'lex', 'sha256$cHKh2ZVqdqSRoBbx$31ada3addcd1604e55728c6003c34a6126601a3745443b869f7e249c621d8405', '2023-03-15')\n",
-      "(4, 'Eli Whitney', 'whit', 'sha256$W148lda1rZv0iHgd$10388e75cc86a508ae83cba1c963145ffa81daa6ad64721c80a80b82f35de7e8', '2023-03-15')\n",
-      "(5, 'Indiana Jones', 'indi', 'sha256$CjCWYu5oyfuPuAqV$b279a8f403567470e25c67ecdf2cb4baaa58f1906f3b86cc15ada2642d6d4456', '1920-10-21')\n",
-      "(6, 'Marion Ravenwood', 'raven', 'sha256$YMJAJQmEnhGEFKBG$4ddc1c823f808f55586b520d5f7e17ccefbbbd9e7b11e31c76b243ac4cbf58bf', '1921-10-21')\n",
-      "(7, 'ekam', 'ekm', 'sha256$ylbg84cxQufRxZoF$e975cbca25bd3d16b94a9791627910fea7bda9dd803bb33e36ad289c067db193', '2006-05-04')\n",
-      "(8, 'mark', '', '', '')\n",
-      "(9, 'George Washington', 'wash', 'gothackednewpassword123', '1778-04-03')\n",
-      "The row with uid lex was successfully deleted\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Menu, to run other cells from one control point\n",
     "def menu():\n",
@@ -410,6 +384,107 @@
     "- Add this Blog to you own Blogging site.  In the Blog add notes and observations on each code cell.\n",
     "- Create a new Table or do something new, [sqlite documentation](https://www.sqlitetutorial.net/sqlite-python/creating-tables/)\n",
     "- In implementation in previous bullet, do you see procedural abstraction?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error while executing the INSERT: near \"_calories\": syntax error\n"
+     ]
+    }
+   ],
+   "source": [
+    "#READ METHOD \n",
+    "import sqlite3\n",
+    "\n",
+    "def read():\n",
+    "    conn = sqlite3.connect(database)\n",
+    "    cursor = conn.cursor()\n",
+    "    \n",
+    "    results = cursor.execute('SELECT * FROM meal_log').fetchall()\n",
+    "\n",
+    "    if len(results) == 0:\n",
+    "        print(\"Table is empty\")\n",
+    "    else:\n",
+    "        for row in results:\n",
+    "            print(row)\n",
+    "\n",
+    "    cursor.close()\n",
+    "    conn.close()\n",
+    "\n",
+    "\n",
+    "\n",
+    "# CREATE METHOD \n",
+    "def create():\n",
+    "    name = input(\"Enter the name of your meal (names must be unique.. if there are multiple of the same meal, add a number):\")\n",
+    "    foodgroup = input(\"Enter what food group the meal is in:\")\n",
+    "    calories = input(\"Enter the number of calories the meal is\")\n",
+    "    time = input(\"enter the time you ate the meal (include AM/PM)\")\n",
+    "    \n",
+    "    conn = sqlite3.connect(database)\n",
+    "    cursor = conn.cursor()\n",
+    "\n",
+    "    try:\n",
+    "        cursor.execute(\"INSERT INTO meal_log (_name, _foodgroup, _calories, _time) VALUES (?, ?, ?, ?)\", (name, foodgroup, calories, time))\n",
+    "        \n",
+    "        conn.commit()\n",
+    "        print(f\"A new meal {name} has been created\")\n",
+    "                \n",
+    "    except sqlite3.Error as error:\n",
+    "        print(\"Error while executing the INSERT:\", error)\n",
+    "\n",
+    "    cursor.close()\n",
+    "    conn.close()\n",
+    "\n",
+    "\n",
+    "# DELETE METHOD:\n",
+    "\n",
+    "import sqlite3\n",
+    "\n",
+    "def delete():\n",
+    "    name = input(\"Enter meal name to delete\")\n",
+    "    conn = sqlite3.connect(database)\n",
+    "    cursor = conn.cursor()\n",
+    "    \n",
+    "    try:\n",
+    "        cursor.execute(\"DELETE FROM users WHERE _name = ?\", (name))\n",
+    "        if cursor.rowcount == 0:\n",
+    "            # The uid was not found in the table\n",
+    "            print(f\"Name {name} was not found in the table\")\n",
+    "        else:\n",
+    "            # The uid was found in the table and the row was deleted\n",
+    "            print(f\"The row with name {name} was successfully deleted\")\n",
+    "        conn.commit()\n",
+    "    except sqlite3.Error as error:\n",
+    "        print(\"Error while executing the DELETE:\", error)\n",
+    "        \n",
+    "    cursor.close()\n",
+    "    conn.close()\n",
+    "    \n",
+    "def menu():\n",
+    "    operation = input(\"Enter: (C)reate (R)ead or (D)elete\")\n",
+    "    if operation.lower() == 'c':\n",
+    "        create()\n",
+    "    elif operation.lower() == 'r':\n",
+    "        read()\n",
+    "    elif operation.lower() == 'd':\n",
+    "        delete()\n",
+    "    elif len(operation)==0: # Escape Key\n",
+    "        return\n",
+    "    else:\n",
+    "        print(\"Please enter c, r, u, or d\") \n",
+    "    menu() # recursion, repeat menu\n",
+    "        \n",
+    "try:\n",
+    "    menu() # start menu\n",
+    "except:\n",
+    "    print(\"error\")"
    ]
   }
  ],
