--- a/_notebooks/2023-03-29-DS-hashmaps.ipynb
+++ b/_notebooks/2023-03-29-DS-hashmaps.ipynb
@@ -8,10 +8,7 @@
     "#  Data Structures- Hashmaps, Sets, Hash Tables, Hashing and Collisions\n",
     "> Observing hashmaps with python dictionaries\n",
     "- toc: true\n",
-    "- image: /images/python.png\n",
-    "- categories: []\n",
-    "- type: pbl\n",
-    "- week: 28"
+    "- image: /images/python.png"
    ]
   },
   {
@@ -23,13 +20,13 @@
     "\n",
     "> A hashtable is a data structure that with a collection of key-value pairs, where each key maps to a value, and the keys must be unique and hashable.\n",
     "\n",
-    "- In Python there is a built in hashtable known as a _______________.\n",
+    "- In Python there is a built in hashtable known as a DICTIONARY\n",
     "\n",
     "> The primary purpose of a hashtable is to provide efficient lookup, insertion, and deletion operations. When an element is to be inserted into the hashtable, a hash function is used to map the key to a specific index in the underlying array that is used to store the key-value pairs. The value is then stored at that index. When searching for a value, the hash function is used again to find the index where the value is stored.\n",
     "\n",
     "> The key advantage of a hashtable over other data structures like arrays and linked lists is its average-case time complexity for lookup, insertion, and deletion operations.\n",
     "\n",
-    "- The typical time complexity of a hashtable is _______________. \n"
+    "- The typical time complexity of a hashtable is constant (O(n)). \n"
    ]
   },
   {
@@ -50,21 +47,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3}\n"
+     ]
+    }
+   ],
    "source": [
     "# Creating a set using set() function\n",
     "my_set = set([1, 2, 3, 2, 1])\n",
     "print(my_set)  \n",
     "\n",
     "# What do you notice in the output?\n",
-    "#\n",
-    "#\n",
+    "# the output is consists of all unique numbers\n",
+    "\n",
     "\n",
     "# Why do you think Sets are in the same tech talk as Hashmaps/Hashtables?\n",
-    "#\n",
-    "#"
+    "# Sets may also deal with collisions the same as dictionaries, by making sure values are unique\n",
+    "# No duplicates"
    ]
   },
   {
@@ -79,9 +84,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'title': 'Lover', 'artist': 'Taylor Swift', 'year': 2019, 'genre': ['Pop', 'Synth-pop'], 'tracks': {1: 'I Forgot That You Existed', 2: 'Cruel Summer', 3: 'Lover', 4: 'The Man', 5: 'The Archer', 6: 'I Think He Knows', 7: 'Miss Americana & The Heartbreak Prince', 8: 'Paper Rings', 9: 'Cornelia Street', 10: 'Death By A Thousand Cuts', 11: 'London Boy', 12: \"Soon You'll Get Better (feat. Dixie Chicks)\", 13: 'False God', 14: 'You Need To Calm Down', 15: 'Afterglow', 16: 'Me! (feat. Brendon Urie of Panic! At The Disco)', 17: \"It's Nice To Have A Friend\", 18: 'Daylight'}}\n"
+     ]
+    }
+   ],
    "source": [
     "# Creating a dictionary with information about the album \"Lover\"\n",
     "lover_album = {\n",
@@ -112,8 +125,8 @@
     "}\n",
     "\n",
     "# What data structures do you see?\n",
-    "#\n",
-    "#\n",
+    "# list (genre)\n",
+    "# dictionary (tracks)\n",
     "\n",
     "# Printing the dictionary\n",
     "print(lover_album)"
@@ -121,9 +134,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 'I Forgot That You Existed', 2: 'Cruel Summer', 3: 'Lover', 4: 'The Man', 5: 'The Archer', 6: 'I Think He Knows', 7: 'Miss Americana & The Heartbreak Prince', 8: 'Paper Rings', 9: 'Cornelia Street', 10: 'Death By A Thousand Cuts', 11: 'London Boy', 12: \"Soon You'll Get Better (feat. Dixie Chicks)\", 13: 'False God', 14: 'You Need To Calm Down', 15: 'Afterglow', 16: 'Me! (feat. Brendon Urie of Panic! At The Disco)', 17: \"It's Nice To Have A Friend\", 18: 'Daylight'}\n",
+      "{1: 'I Forgot That You Existed', 2: 'Cruel Summer', 3: 'Lover', 4: 'The Man', 5: 'The Archer', 6: 'I Think He Knows', 7: 'Miss Americana & The Heartbreak Prince', 8: 'Paper Rings', 9: 'Cornelia Street', 10: 'Death By A Thousand Cuts', 11: 'London Boy', 12: \"Soon You'll Get Better (feat. Dixie Chicks)\", 13: 'False God', 14: 'You Need To Calm Down', 15: 'Afterglow', 16: 'Me! (feat. Brendon Urie of Panic! At The Disco)', 17: \"It's Nice To Have A Friend\", 18: 'Daylight'}\n"
+     ]
+    }
+   ],
    "source": [
     "# Retrieve value from dictionary with key\n",
     "print(lover_album.get('tracks'))\n",
@@ -133,28 +155,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Man\n",
+      "The Man\n"
+     ]
+    }
+   ],
    "source": [
     "# Retrieve value from a dictionary inside a dictionary\n",
-    "print(lover_album.get('tracks')[4])\n",
+    "print(lover_album.get('tracks')[4]) # using .get\n",
     "# or\n",
-    "print(lover_album['tracks'][4])"
+    "print(lover_album['tracks'][4]) # using index"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'title': 'Lover', 'artist': 'Taylor Swift', 'year': 2019, 'genre': ['Pop', 'Synth-pop'], 'tracks': {1: 'I Forgot That You Existed', 2: 'Cruel Summer', 3: 'Lover', 4: 'The Man', 5: 'The Archer', 6: 'I Think He Knows', 7: 'Miss Americana & The Heartbreak Prince', 8: 'Paper Rings', 9: 'Cornelia Street', 10: 'Death By A Thousand Cuts', 11: 'London Boy', 12: \"Soon You'll Get Better (feat. Dixie Chicks)\", 13: 'False God', 14: 'You Need To Calm Down', 15: 'Afterglow', 16: 'Me! (feat. Brendon Urie of Panic! At The Disco)', 17: \"It's Nice To Have A Friend\", 18: 'Daylight'}, 'producer': {'Frank Dukes', 'Jack Antonoff', 'Joel Little', 'Taylor Swift', 'Louis Bell'}}\n"
+     ]
+    }
+   ],
    "source": [
     "# adding a value with a new key\n",
-    "lover_album[\"producer\"] = ['Taylor Swift', 'Jack Antonoff', 'Joel Little', 'Taylor Swift', 'Louis Bell', 'Frank Dukes']\n",
+    "lover_album[\"producer\"] = set(['Taylor Swift', 'Jack Antonoff', 'Joel Little', 'Taylor Swift', 'Louis Bell', 'Frank Dukes'])\n",
     "\n",
     "# What can you change to make sure there are no duplicate producers?\n",
-    "#\n",
-    "#\n",
+    "# We can make the producers a set instead of a list\n",
     "\n",
     "# Printing the dictionary\n",
     "print(lover_album)"
@@ -162,16 +200,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'title': 'Lover', 'artist': 'Taylor Swift', 'year': 2019, 'genre': ['Pop', 'Synth-pop', 'electropop'], 'tracks': {1: 'I Forgot That You Existed', 2: 'Cruel Summer', 3: 'Lover', 4: 'The Man', 5: 'The Archer', 6: 'I Think He Knows', 7: 'Miss Americana & The Heartbreak Prince', 8: 'Paper Rings', 9: 'Cornelia Street', 10: 'Death By A Thousand Cuts', 11: 'London Boy', 12: \"Soon You'll Get Better (feat. Dixie Chicks)\", 13: 'False God', 14: 'You Need To Calm Down', 15: 'Afterglow', 16: 'Me! (feat. Brendon Urie of Panic! At The Disco)', 17: \"It's Nice To Have A Friend\", 18: 'Daylight', 19: 'All Of The Girls You Loved Before'}, 'producer': {'Frank Dukes', 'Jack Antonoff', 'Joel Little', 'Taylor Swift', 'Louis Bell'}}\n"
+     ]
+    }
+   ],
    "source": [
     "# Adding a an key-value pair to an existing key \n",
     "lover_album[\"tracks\"].update({19: \"All Of The Girls You Loved Before\"})\n",
     "\n",
     "# How would add an additional genre to the dictionary, like electropop? \n",
-    "# \n",
-    "# \n",
+    "# note: .update did not work for lists; have to use .append\n",
+    "lover_album[\"genre\"].append(\"electropop\") \n",
     "\n",
     "# Printing the dictionary\n",
     "print(lover_album)"
@@ -179,9 +225,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "title: Lover\n",
+      "artist: Taylor Swift\n",
+      "year: 2019\n",
+      "genre: ['Pop', 'Synth-pop', 'electropop']\n",
+      "tracks: {1: 'I Forgot That You Existed', 2: 'Cruel Summer', 3: 'Lover', 4: 'The Man', 5: 'The Archer', 6: 'I Think He Knows', 7: 'Miss Americana & The Heartbreak Prince', 8: 'Paper Rings', 9: 'Cornelia Street', 10: 'Death By A Thousand Cuts', 11: 'London Boy', 12: \"Soon You'll Get Better (feat. Dixie Chicks)\", 13: 'False God', 14: 'You Need To Calm Down', 15: 'Afterglow', 16: 'Me! (feat. Brendon Urie of Panic! At The Disco)', 17: \"It's Nice To Have A Friend\", 18: 'Daylight', 19: 'All Of The Girls You Loved Before'}\n",
+      "producer: {'Frank Dukes', 'Jack Antonoff', 'Joel Little', 'Taylor Swift', 'Louis Bell'}\n"
+     ]
+    }
+   ],
    "source": [
     "# Print lover_album in more readable format\n",
     "for k,v in lover_album.items(): # iterate using a for loop for key and value\n",
@@ -194,9 +253,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019\n"
+     ]
+    }
+   ],
    "source": [
     "# Using conditionals to retrieve a random song\n",
     "def search():\n",
