--- a/_notebooks/2023-03-29-DS-hashmaps.ipynb
+++ b/_notebooks/2023-03-29-DS-hashmaps.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -64,12 +64,12 @@
     "print(my_set)  \n",
     "\n",
     "# What do you notice in the output?\n",
-    "# the output is consists of all unique numbers\n",
+    "# ANSWER: the output is consists of all unique numbers\n",
     "\n",
     "\n",
     "# Why do you think Sets are in the same tech talk as Hashmaps/Hashtables?\n",
-    "# Sets may also deal with collisions the same as dictionaries, by making sure values are unique\n",
-    "# No duplicates"
+    "# ANSWER: Sets may also deal with collisions the same as dictionaries, by making sure values are unique\n",
+    "#         --> No duplicates"
    ]
   },
   {
@@ -244,26 +244,14 @@
    "source": [
     "# Print lover_album in more readable format\n",
     "for k,v in lover_album.items(): # iterate using a for loop for key and value\n",
-    "    print(str(k) + \": \" + str(v))\n",
-    "\n",
-    "# Write your own code to print tracks in readable format\n",
-    "#\n",
-    "#"
+    "    print(str(k) + \": \" + str(v))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2019\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Using conditionals to retrieve a random song\n",
     "def search():\n",
@@ -276,7 +264,6 @@
     "search()\n",
     "\n",
     "# This is a very basic code segment, how can you improve upon this code?\n",
-    "#\n",
     "#"
    ]
   },
