--- a/_posts/2022-03-21-mcq4.md
+++ b/_posts/2022-03-21-mcq4.md
@@ -7,3 +7,44 @@ description: Corrections for the MCQ#4
 <h2> MCQ #4 Corrections [TOTAL SCORE: 43/50]</h2>
 
 ### Q3: 
+![](https://user-images.githubusercontent.com/111466888/229604617-88dd3d93-da57-4403-b4a6-02b2572a528c.png)
+
+**EXPLANATION:**  Breaking these 4 connections (illustrated in the image) would cause the two computers to loose connections 
+
+### Q6:
+
+![](https://user-images.githubusercontent.com/111466888/229605028-9c2924e5-a817-4db3-8b71-0ced204ccbf8.png)
+
+**EXPLANATION:** Packages don't need to be encrypted, only broken down. However, metadata is needed to route the data
+
+### Q12:
+
+![](https://user-images.githubusercontent.com/111466888/229605423-173e8705-6650-4405-8919-0d7e9605d1cb.png)
+
+**EXPLANATION:** Run time does affect teh ability of a program to process data, since the program is unable to process it if it takes too long. However, the number of statements in a program doesn't affect the ability, since the efficiency of a program is not affected by number of steps.
+
+### Q15: 
+
+![](https://user-images.githubusercontent.com/111466888/229605901-33303fc4-345b-460e-bcce-b6e70a21802e.png)
+
+**EXPLANATION:** Information about individual subscribers (like ID) is not stored, so it is impossible to know how many individual subscribers there are per month
+
+### Q28: 
+
+![](https://user-images.githubusercontent.com/111466888/229606277-e76e28d3-0088-49ac-b398-820de9f926e1.png)
+
+**EXPLANATION:** having 64 bits adds 32 more digits to the data, which means 
+
+### Q37: 
+
+![](https://user-images.githubusercontent.com/111466888/229608850-219e2016-ab51-472d-82c9-237680c4969d.png)
+
+**EXPLANATION:** n^2 is reasonable (?)
+
+### Q49: 
+
+![](https://user-images.githubusercontent.com/111466888/229609699-ba2a16b8-3135-4ac8-9577-655f15f42068.png)``
+
+![](https://user-images.githubusercontent.com/111466888/229610358-c9e60c1b-ae94-4af4-95be-6110b70c421a.png)
+
+**EXPLANATION:** In the answer I chose, the index was starting at 2, meaning the indexes before those wouldn't be compared to the max value
