--- a/_notebooks/2023-03-29-DS-hashmaps.ipynb
+++ b/_notebooks/2023-03-29-DS-hashmaps.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'title': 'Lover', 'artist': 'Taylor Swift', 'year': 2019, 'genre': ['Pop', 'Synth-pop'], 'tracks': {1: 'I Forgot That You Existed', 2: 'Cruel Summer', 3: 'Lover', 4: 'The Man', 5: 'The Archer', 6: 'I Think He Knows', 7: 'Miss Americana & The Heartbreak Prince', 8: 'Paper Rings', 9: 'Cornelia Street', 10: 'Death By A Thousand Cuts', 11: 'London Boy', 12: \"Soon You'll Get Better (feat. Dixie Chicks)\", 13: 'False God', 14: 'You Need To Calm Down', 15: 'Afterglow', 16: 'Me! (feat. Brendon Urie of Panic! At The Disco)', 17: \"It's Nice To Have A Friend\", 18: 'Daylight'}, 'producer': {'Frank Dukes', 'Jack Antonoff', 'Joel Little', 'Taylor Swift', 'Louis Bell'}}\n"
+      "{'title': 'Lover', 'artist': 'Taylor Swift', 'year': 2019, 'genre': ['Pop', 'Synth-pop'], 'tracks': {1: 'I Forgot That You Existed', 2: 'Cruel Summer', 3: 'Lover', 4: 'The Man', 5: 'The Archer', 6: 'I Think He Knows', 7: 'Miss Americana & The Heartbreak Prince', 8: 'Paper Rings', 9: 'Cornelia Street', 10: 'Death By A Thousand Cuts', 11: 'London Boy', 12: \"Soon You'll Get Better (feat. Dixie Chicks)\", 13: 'False God', 14: 'You Need To Calm Down', 15: 'Afterglow', 16: 'Me! (feat. Brendon Urie of Panic! At The Disco)', 17: \"It's Nice To Have A Friend\", 18: 'Daylight'}, 'producer': {'Joel Little', 'Frank Dukes', 'Louis Bell', 'Taylor Swift', 'Jack Antonoff'}}\n"
      ]
     }
    ],
@@ -200,14 +200,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'title': 'Lover', 'artist': 'Taylor Swift', 'year': 2019, 'genre': ['Pop', 'Synth-pop', 'electropop'], 'tracks': {1: 'I Forgot That You Existed', 2: 'Cruel Summer', 3: 'Lover', 4: 'The Man', 5: 'The Archer', 6: 'I Think He Knows', 7: 'Miss Americana & The Heartbreak Prince', 8: 'Paper Rings', 9: 'Cornelia Street', 10: 'Death By A Thousand Cuts', 11: 'London Boy', 12: \"Soon You'll Get Better (feat. Dixie Chicks)\", 13: 'False God', 14: 'You Need To Calm Down', 15: 'Afterglow', 16: 'Me! (feat. Brendon Urie of Panic! At The Disco)', 17: \"It's Nice To Have A Friend\", 18: 'Daylight', 19: 'All Of The Girls You Loved Before'}, 'producer': {'Frank Dukes', 'Jack Antonoff', 'Joel Little', 'Taylor Swift', 'Louis Bell'}}\n"
+      "{'title': 'Lover', 'artist': 'Taylor Swift', 'year': 2019, 'genre': ['Pop', 'Synth-pop', 'electropop'], 'tracks': {1: 'I Forgot That You Existed', 2: 'Cruel Summer', 3: 'Lover', 4: 'The Man', 5: 'The Archer', 6: 'I Think He Knows', 7: 'Miss Americana & The Heartbreak Prince', 8: 'Paper Rings', 9: 'Cornelia Street', 10: 'Death By A Thousand Cuts', 11: 'London Boy', 12: \"Soon You'll Get Better (feat. Dixie Chicks)\", 13: 'False God', 14: 'You Need To Calm Down', 15: 'Afterglow', 16: 'Me! (feat. Brendon Urie of Panic! At The Disco)', 17: \"It's Nice To Have A Friend\", 18: 'Daylight', 19: 'All Of The Girls You Loved Before'}, 'producer': {'Joel Little', 'Frank Dukes', 'Louis Bell', 'Taylor Swift', 'Jack Antonoff'}}\n"
      ]
     }
    ],
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -236,32 +236,120 @@
       "artist: Taylor Swift\n",
       "year: 2019\n",
       "genre: ['Pop', 'Synth-pop', 'electropop']\n",
-      "tracks: {1: 'I Forgot That You Existed', 2: 'Cruel Summer', 3: 'Lover', 4: 'The Man', 5: 'The Archer', 6: 'I Think He Knows', 7: 'Miss Americana & The Heartbreak Prince', 8: 'Paper Rings', 9: 'Cornelia Street', 10: 'Death By A Thousand Cuts', 11: 'London Boy', 12: \"Soon You'll Get Better (feat. Dixie Chicks)\", 13: 'False God', 14: 'You Need To Calm Down', 15: 'Afterglow', 16: 'Me! (feat. Brendon Urie of Panic! At The Disco)', 17: \"It's Nice To Have A Friend\", 18: 'Daylight', 19: 'All Of The Girls You Loved Before'}\n",
-      "producer: {'Frank Dukes', 'Jack Antonoff', 'Joel Little', 'Taylor Swift', 'Louis Bell'}\n"
+      "tracks:\n",
+      "I Forgot That You Existed\n",
+      "Cruel Summer\n",
+      "Lover\n",
+      "The Man\n",
+      "The Archer\n",
+      "I Think He Knows\n",
+      "Miss Americana & The Heartbreak Prince\n",
+      "Paper Rings\n",
+      "Cornelia Street\n",
+      "Death By A Thousand Cuts\n",
+      "London Boy\n",
+      "Soon You'll Get Better (feat. Dixie Chicks)\n",
+      "False God\n",
+      "You Need To Calm Down\n",
+      "Afterglow\n",
+      "Me! (feat. Brendon Urie of Panic! At The Disco)\n",
+      "It's Nice To Have A Friend\n",
+      "Daylight\n",
+      "All Of The Girls You Loved Before\n",
+      "producer: {'Joel Little', 'Frank Dukes', 'Louis Bell', 'Taylor Swift', 'Jack Antonoff'}\n"
      ]
     }
    ],
    "source": [
     "# Print lover_album in more readable format\n",
-    "for k,v in lover_album.items(): # iterate using a for loop for key and value\n",
-    "    print(str(k) + \": \" + str(v))\n"
+    "def album_print():\n",
+    "    for k,v in lover_album.items(): # iterate using a for loop for key and value\n",
+    "        if k == \"tracks\":\n",
+    "            print(\"tracks:\")\n",
+    "            for track in lover_album['tracks']: \n",
+    "                print(lover_album['tracks'][track])\n",
+    "        else:\n",
+    "            print(str(k) + \": \" + str(v))\n",
+    "            \n",
+    "album_print()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1: title\n",
+      "2: artist\n",
+      "3: year\n",
+      "4: genre\n",
+      "5: tracks\n",
+      "6: producer(s)\n",
+      "\n",
+      "TRACKS:\n",
+      "I Forgot That You Existed\n",
+      "Cruel Summer\n",
+      "Lover\n",
+      "The Man\n",
+      "The Archer\n",
+      "I Think He Knows\n",
+      "Miss Americana & The Heartbreak Prince\n",
+      "Paper Rings\n",
+      "Cornelia Street\n",
+      "Death By A Thousand Cuts\n",
+      "London Boy\n",
+      "Soon You'll Get Better (feat. Dixie Chicks)\n",
+      "False God\n",
+      "You Need To Calm Down\n",
+      "Afterglow\n",
+      "Me! (feat. Brendon Urie of Panic! At The Disco)\n",
+      "It's Nice To Have A Friend\n",
+      "Daylight\n",
+      "All Of The Girls You Loved Before\n"
+     ]
+    }
+   ],
    "source": [
     "# Using conditionals to retrieve a random song\n",
-    "def search():\n",
-    "    search = input(\"What would you like to know about the album?\")\n",
-    "    if lover_album.get(search.lower()) == None:\n",
-    "        print(\"Invalid Search\")\n",
-    "    else:\n",
-    "        print(lover_album.get(search.lower()))\n",
+    "def album_search():\n",
+    "    print(\"1: title\")\n",
+    "    print(\"2: artist\")\n",
+    "    print(\"3: year\")\n",
+    "    print(\"4: genre\")\n",
+    "    print(\"5: tracks\")\n",
+    "    print(\"6: producer(s)\")\n",
+    "    search = input(\"What would you like to know about the album: Lover?\")\n",
+    "    if search == \"1\":\n",
+    "        print(\"\")\n",
+    "        print(\"TITLE:\")\n",
+    "        print(lover_album.get('title'))\n",
+    "    elif search == \"2\":\n",
+    "        print(\"\")\n",
+    "        print(\"ARTIST\")\n",
+    "        print(lover_album.get('artist'))\n",
+    "    elif search == \"3\":\n",
+    "        print(\"\")\n",
+    "        print(\"YEAR\")\n",
+    "        print(lover_album.get('year'))\n",
+    "    elif search == \"4\":\n",
+    "        print(\"\")\n",
+    "        print(\"GENRE\")\n",
+    "        print(lover_album.get('genre'))\n",
+    "    elif search == \"5\":\n",
+    "        print(\"\")\n",
+    "        print(\"TRACKS:\")\n",
+    "        for track in lover_album['tracks']: \n",
+    "            print(lover_album['tracks'][track])\n",
+    "    elif search == \"6\":\n",
+    "        print(\"\")\n",
+    "        print(\"PRODUCERS\")\n",
+    "        print(lover_album.get('producer'))\n",
     "\n",
-    "search()\n",
+    "album_search()\n",
     "\n",
     "# This is a very basic code segment, how can you improve upon this code?\n",
     "#"
@@ -275,13 +363,132 @@
     "## Hacks\n",
     "\n",
     "- Answer *ALL* questions in the code segments\n",
-    "- Create a diagram or comparison illustration (Canva).\n",
+    "<br> \n",
+    "**done**\n",
+    "- Create a diagram or comparison illustration (Canva). \n",
     "    - What are the pro and cons of using this data structure? \n",
     "    - Dictionary vs List    \n",
-    "- Expand upon the code given to you, possible improvements in comments\n",
+    "    <br>\n",
+    "- Expand upon the code given to you, possible improvements in comments \n",
+    "<br>\n",
+    "**done**\n",
     "- Build your own album showing features of a python dictionary\n",
     "\n",
     "- For Mr. Yeung's class: Justify your favorite Taylor Swift song, answer may effect seed"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hacks with my own album:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'title': 'Heatwave', 'artist': 'HARBOUR', 'year': 2017, 'genre': ['Indie Rock'], 'tracks': {1: 'Waittyn', 2: 'Ily', 3: 'Get You High', 4: 'Obvious', 5: 'Float', 6: 'Soco', 7: 'Judy You Hung the Moon', 8: 'Radiate', 9: 'With Love', 10: 'Saddest Game', 11: 'Undone'}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_album = {\n",
+    "    \"title\": \"Heatwave\",\n",
+    "    \"artist\": \"HARBOUR\",\n",
+    "    \"year\": 2017,\n",
+    "    \"genre\": [\"Indie Rock\"],\n",
+    "    \"tracks\": {\n",
+    "        1: \"Waittyn\",\n",
+    "        2: \"Ily\",\n",
+    "        3: \"Get You High\",\n",
+    "        4: \"Obvious\",\n",
+    "        5: \"Float\",\n",
+    "        6: \"Soco\",\n",
+    "        7: \"Judy You Hung the Moon\",\n",
+    "        8: \"Radiate\",\n",
+    "        9: \"With Love\",\n",
+    "        10: \"Saddest Game\",\n",
+    "        11: \"Undone\",        \n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "print(new_album)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1: title\n",
+      "2: artist\n",
+      "3: year\n",
+      "4: genre\n",
+      "5: tracks\n",
+      "6: producer(s)\n",
+      "\n",
+      "TRACKS:\n",
+      "Waittyn\n",
+      "Ily\n",
+      "Get You High\n",
+      "Obvious\n",
+      "Float\n",
+      "Soco\n",
+      "Judy You Hung the Moon\n",
+      "Radiate\n",
+      "With Love\n",
+      "Saddest Game\n",
+      "Undone\n"
+     ]
+    }
+   ],
+   "source": [
+    "def new_album_search():\n",
+    "    print(\"1: title\")\n",
+    "    print(\"2: artist\")\n",
+    "    print(\"3: year\")\n",
+    "    print(\"4: genre\")\n",
+    "    print(\"5: tracks\")\n",
+    "    print(\"6: producer(s)\")\n",
+    "    search = input(\"What would you like to know about the album: Heatwave?\")\n",
+    "    if search == \"1\":\n",
+    "        print(\"\")\n",
+    "        print(\"TITLE:\")\n",
+    "        print(new_album.get('title'))\n",
+    "    elif search == \"2\":\n",
+    "        print(\"\")\n",
+    "        print(\"ARTIST\")\n",
+    "        print(new_album.get('artist'))\n",
+    "    elif search == \"3\":\n",
+    "        print(\"\")\n",
+    "        print(\"YEAR\")\n",
+    "        print(new_album.get('year'))\n",
+    "    elif search == \"4\":\n",
+    "        print(\"\")\n",
+    "        print(\"GENRE\")\n",
+    "        print(new_album.get('genre'))\n",
+    "    elif search == \"5\":\n",
+    "        print(\"\")\n",
+    "        print(\"TRACKS:\")\n",
+    "        for track in new_album['tracks']: \n",
+    "            print(new_album['tracks'][track])\n",
+    "    elif search == \"6\":\n",
+    "        print(\"\")\n",
+    "        print(\"PRODUCERS\")\n",
+    "        print(new_album.get('producer'))\n",
+    "\n",
+    "new_album_search()\n"
    ]
   }
  ],
