--- a/_notebooks/2022-12-06-lesson5.ipynb
+++ b/_notebooks/2022-12-06-lesson5.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -8,7 +9,6 @@
     "> \n",
     "\n",
     "- title: Sections 3.9 and 3.11\n",
-    "- layout: default\n",
     "- toc: true\n",
     "- badges: false\n",
     "- comments: true\n",
@@ -873,7 +873,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (v3.10.6:9c7b4bd164, Aug  1 2022, 17:13:48) [Clang 13.0.0 (clang-1300.0.29.30)]"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
