trying to fix jekyl

--- a/_notebooks/2023-04-25-P3M-Simulations.ipynb
+++ b/_notebooks/2023-04-25-P3M-Simulations.ipynb
@@ -4201,7 +4201,7 @@
     "M = 1000 # max capacity of animals that can be carried\n",
     "a = 100 # initial number of animals at start of simulation  \n",
     "k = 0.01 # logistic growth rate\n",
-    "e = 2.71828 # approximate value of e\n",
+    "e = 2.71828 # approximate value of e (not included in python)\n",
     "\n",
     "t = 200 # time span of simulation \n",
     "\n",
