--- a/_notebooks/2023-04-27-P3M-Team-SnapShot-Student.ipynb
+++ b/_notebooks/2023-04-27-P3M-Team-SnapShot-Student.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "When building an application that requires users to create accounts or sign in, handling data related to users is crucial. This data can include things like user profiles, preferences, and activity logs, which can be used to _____ the user experience and _____ the application's performance.\n",
+    "When building an application that requires users to create accounts or sign in, handling data related to users is crucial. This data can include things like user profiles, preferences, and activity logs, which can be used to `personlize` the user experience and `improve` the application's performance.\n",
     "\n",
     "By learning how to handle data related to users effectively and efficiently, you'll be equipped with the skills and knowledge needed to build helpful applications that meet the needs of your users.\n",
     "\n",
@@ -904,13 +904,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Hacks can go here!\n",
     "\n",
@@ -967,6 +960,187 @@
     "\n",
     "Create your own SQL database and create an algorithm that can insert, update, and delete data related to your topic of choice. Functionality for adding image data MUST be included. Points will be awarded based on effort and success. (0.45)\n",
     "- Extra Credit: Connect your backend database to a visible frontend! Screenshots of displayed data is fine. (+0.05)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: image\n",
+      "Date Taken: 2023-04-30\n",
+      "Location: New York City\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sqlite3\n",
+    "from PIL import Image\n",
+    "import io\n",
+    "\n",
+    "conn = sqlite3.connect('database.db')\n",
+    "\n",
+    "#making table using SQL commands \n",
+    "conn.execute('''\n",
+    "CREATE TABLE IF NOT EXISTS image_info (\n",
+    "    id INTEGER PRIMARY KEY AUTOINCREMENT,\n",
+    "    name TEXT,\n",
+    "    date_taken TEXT,\n",
+    "    location TEXT,\n",
+    "    image BLOB\n",
+    ")\n",
+    "''')\n",
+    "\n",
+    "with open('image.jpg', 'rb') as jpg:\n",
+    "    image_data = jpg.read()\n",
+    "\n",
+    "#initialize\n",
+    "conn.execute(\"INSERT INTO image_info (name, date_taken, location, image) VALUES (?, ?, ?, ?)\", \n",
+    "             ('Sunset', '2023-04-30', 'Internet', image_data))\n",
+    "conn.commit()\n",
+    "\n",
+    "# Retrieve the image data and information from the database\n",
+    "result = conn.execute(\"SELECT name, date_taken, location, image FROM image_info WHERE id=?\", (1,)).fetchone()\n",
+    "\n",
+    "# Display the image and information\n",
+    "image_data = io.BytesIO(result[3])\n",
+    "image = Image.open(image_data)\n",
+    "print(\"Name:\", result[0])\n",
+    "print(\"Date Taken:\", result[1])\n",
+    "print(\"Location:\", result[2])\n",
+    "image.show()\n",
+    "\n",
+    "# Close the connection\n",
+    "conn.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image ID: 3\n",
+      "Name: grass\n",
+      "Date taken: 2023-04-30\n",
+      "Location: noclue\n",
+      "Please enter c, r, u, or d\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sqlite3\n",
+    "\n",
+    "# Function for creating a new image and information in the database\n",
+    "def create(name, date_taken, location, image_path):\n",
+    "    conn = sqlite3.connect('database.db')\n",
+    "    \n",
+    "    with open(image_path, 'rb') as f:\n",
+    "        image_data = f.read()\n",
+    "        conn.execute(\"INSERT INTO image_info (name, date_taken, location, image) VALUES (?, ?, ?, ?)\", \n",
+    "                     (name, date_taken, location, image_data))\n",
+    "        conn.commit()\n",
+    "\n",
+    "    conn.close()\n",
+    "    \n",
+    "    \n",
+    "def update(image_id, name, date_taken, location, image_path):\n",
+    "    conn = sqlite3.connect('database.db')\n",
+    "\n",
+    "    with open(image_path, 'rb') as f:\n",
+    "        image_data = f.read()\n",
+    "        conn.execute(\"UPDATE image_info SET name=?, date_taken=?, location=?, image=? WHERE id=?\", \n",
+    "                     (name, date_taken, location, image_data, image_id))\n",
+    "        conn.commit()\n",
+    "        \n",
+    "    conn.close()\n",
+    "\n",
+    "\n",
+    "def read(image_id):\n",
+    "    conn = sqlite3.connect('database.db')\n",
+    "\n",
+    "    result = conn.execute(\"SELECT name, date_taken, location, image FROM image_info WHERE id=?\", (image_id,)).fetchone()\n",
+    "    if not result:\n",
+    "        print(\"Image with ID {} not found.\".format(image_id))\n",
+    "        return None\n",
+    "    \n",
+    "    name, date_taken, location, image_data = result\n",
+    "    \n",
+    "    image_data = io.BytesIO(image_data)\n",
+    "    image = Image.open(image_data)\n",
+    "\n",
+    "    print(\"Image ID:\", image_id)\n",
+    "    print(\"Name:\", name)\n",
+    "    print(\"Date taken:\", date_taken)\n",
+    "    print(\"Location:\", location)\n",
+    "    image.show()\n",
+    "\n",
+    "    conn.close()\n",
+    "\n",
+    "def delete(image_id):\n",
+    "\n",
+    "    conn = sqlite3.connect('database.db')\n",
+    "\n",
+    "    result = conn.execute(\"SELECT COUNT(*) FROM image_info WHERE id=?\", (image_id,)).fetchone()\n",
+    "    if result[0] == 0:\n",
+    "        print(\"Image with ID {} not found.\".format(image_id))\n",
+    "        conn.close()\n",
+    "        return\n",
+    "    conn.execute(\"DELETE FROM image_info WHERE id=?\", (image_id,))\n",
+    "    conn.commit()\n",
+    "    print(\"Image with ID {} has been deleted.\".format(image_id))\n",
+    "\n",
+    "    conn.close()\n",
+    "\n",
+    "\n",
+    "\n",
+    "### note: image must be saved beforehand in proper image path \n",
+    "def menu():\n",
+    "   operation = input(\"Enter: (C)reate (R)ead (U)pdate or (D)elete\")\n",
+    "   if operation.lower() == 'c':\n",
+    "       name = input(\"Enter image name: \")\n",
+    "       date_taken = input(\"Enter date taken (YYYY-MM-DD): \")\n",
+    "       location = input(\"Enter location: \")\n",
+    "       image_path = input(\"Enter image file path: \")\n",
+    "       create(name, date_taken, location, image_path)\n",
+    "   elif len(operation)==0: # Escape Key\n",
+    "       return\n",
+    "   if operation.lower() == 'r':\n",
+    "       image_id = input(\"Enter the ID of the image to display: \")\n",
+    "       read(image_id)\n",
+    "   if operation.lower() == 'u':\n",
+    "       image_id = input(\"Enter the ID of the image to update: \")\n",
+    "       name = input(\"Enter new image name: \")\n",
+    "       date_taken = input(\"Enter new date taken (YYYY-MM-DD): \")\n",
+    "       location = input(\"Enter new location: \")\n",
+    "       image_path = input(\"Enter new image file path: \")\n",
+    "       update(image_id, name, date_taken, location, image_path)\n",
+    "   if operation.lower() == 'd':\n",
+    "       image_id = input(\"Enter the ID of the image to delete: \")\n",
+    "       delete(image_id)\n",
+    "   else:\n",
+    "       print(\"Please enter c, r, u, or d\")\n",
+    "        \n",
+    "menu()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Testing create w/ grass image: \n",
+    "\n",
+    "![](https://user-images.githubusercontent.com/111466888/235406198-25535c90-c538-45c7-b7ab-d954564c994c.png)\n",
+    "\n",
+    "### I also tested the read method w/ the grass image, however Mac opens the image in a new window so it doesn't show up on output"
    ]
   }
  ],
