--- a/_notebooks/2023-05-15-DS-sorting.ipynb
+++ b/_notebooks/2023-05-15-DS-sorting.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
      "output_type": "stream",
      "text": [
       "Random List\n",
-      "[70, 88, 8, 54, 95, 47, 71, 90, 20, 36]\n"
+      "[97, 29, 54, 3, 18, 2, 24, 58, 32, 78]\n"
      ]
     }
    ],
@@ -55,7 +55,8 @@
     "\n",
     "> Discuss with a partner... \n",
     "What are some strategies you would use to sort this list? (Don't worry about writing code for now)\n",
-    "- ?"
+    "-  I might go through the list and find the smallest number and put it at the first index, then go through the list again an put the next smallest number at the second index, and so on. \n",
+    "- randomize the order until they're in perfect order "
    ]
   },
   {
@@ -97,14 +98,18 @@
     "How would you sort this list with... \n",
     "- Bubble Sort\n",
     "- Selection Sort\n",
-    "> Explain.\n",
+    "> Bubble Sort: You would go through each item and switch it with the item on the right, if the item on the right is larger. You keep going through the list again and again, doing the same thing until the list is sorted\n",
+    "\n",
+    "> Selection Sort: divide the array into two sections, sorted and unsorted. Do the same thing as bubble sort, except this time, one the larger numbers have reached the end of the array, consider them sorted and don't go through those numbers when comparing.\n",
     "\n",
     "[88, 39, 53, 39, 58, 43, 74, 81, 71, 51]\n",
     "\n",
     "How would you sort this list with... \n",
     "- Merge Sort\n",
     "- Insertion Sort\n",
-    "> Explain.\n"
+    "> Merge Sort: Divide the list into subsections, then sort each subsection. Merge the sorted subsections together, and then merge them again. Repeat this until the list has been fully combined \n",
+    "\n",
+    "> Insertion Sort: Start from the left, and compare with each element in the ist. Place the chosen number to the right of the first number that is smaller than the chosen number. \n"
    ]
   },
   {
@@ -118,9 +123,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random List\n",
+      "['construct', 'Jeames', 'photodecomposition', 'hydrometeorology', 'dermopteran', 'principalness', 'osteoderm', 'tachytype', 'porulose', 'zaptiah']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package words to\n",
+      "[nltk_data]     /Users/ekamjotkaire/nltk_data...\n",
+      "[nltk_data]   Package words is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
     "import nltk\n",
     "import random\n",
@@ -151,10 +174,11 @@
     "\n",
     "- When should you use each algorithm? What makes an algorithm the right choice?\n",
     "- Given the following lists...\n",
-    "    - [0, 2, 6, 4, 8, 10]\n",
-    "    - [Elephant, Banana, Cat, Dog, Apple]\n",
-    "    - [29, 13, 83, 47, 32, 78, 100, 60, 65, 15, 24, 9, 40, 68, 53, 8, 90, 58, 39, 32, 34, 91, 74, 94, 49, 87, 34, 87, 23, 17, 27, 2, 38, 58, 84, 15, 9, 46, 74, 40, 44, 8, 55, 28, 81, 92, 81, 88, 53, 38, 19, 21, 9, 54, 21, 67, 3, 41, 3, 74, 13, 71, 70, 45, 5, 36, 80, 64, 97, 86, 73, 74, 94, 79, 49, 32, 20, 68, 64, 69, 1, 77, 31, 56, 100, 80, 48, 75, 85, 93, 67, 57, 26, 56, 43, 53, 59, 28, 67, 50]\n",
-    "Select the algorithm you believe is best for each, explain."
+    "    - [0, 2, 6, 4, 8, 10] : **Bubble sort would work well here, since only two indexes that need to be swapped, and they are right next to each other.**\n",
+    "    - [Elephant, Banana, Cat, Dog, Apple] : **Selection sort, since it would only take one pass** \n",
+    "    - [29, 13, 83, 47, 32, 78, 100, 60, 65, 15, 24, 9, 40, 68, 53, 8, 90, 58, 39, 32, 34, 91, 74, 94, 49, 87, 34, 87, 23, 17, 27, 2, 38, 58, 84, 15, 9, 46, 74, 40, 44, 8, 55, 28, 81, 92, 81, 88, 53, 38, 19, 21, 9, 54, 21, 67, 3, 41, 3, 74, 13, 71, 70, 45, 5, 36, 80, 64, 97, 86, 73, 74, 94, 79, 49, 32, 20, 68, 64, 69, 1, 77, 31, 56, 100, 80, 48, 75, 85, 93, 67, 57, 26, 56, 43, 53, 59, 28, 67, 50] : **Merge sort, since the list is very large, and breaking it into smaller pieces requires less iterations through the list**\n",
+    "    \n",
+    "Select the algorithm you believe is best for each, explain. **done above**"
    ]
   },
   {
