--- a/_notebooks/2023-05-15-DS-sorting.ipynb
+++ b/_notebooks/2023-05-15-DS-sorting.ipynb
@@ -193,8 +193,14 @@
     "\n",
     "- Run code and then research and answer these questions...\n",
     "    - Is a list and/or dictionary in python considered a primitive or collection type?  Why?\n",
-    "    - Is the list passed into bubble sort \"pass-by-value\" or \"pass-by-reference? Describe why in relation to output.\n",
     "\n",
+    "    The list and dictionary are collection types, since the data stores within them can be more complex and dynamic than primitive types. \n",
+    "    \n",
+    "    - Is the list passed into bubble sort \"pass-by-value\" or \n",
+    "    \"pass-by-reference? Describe why in relation to output.\n",
+    "\n",
+    "    The list is pass by reference, since the list is not being copied into a variable within the function \n",
+    "    \n",
     "- Implement new cell(s) and/or organize cells to do the following.\n",
     "    - Create your own list\n",
     "    - Use your expertise sorting algorithm (selection, insertion, merge). Note, I got my bubble sort from Geek for Geeks and made modifications. Each student in a group should have a unique algorithm.\n",
@@ -208,9 +214,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original\n",
+      "[{'name': 'Risa', 'age': 18, 'city': 'New York'}, {'name': 'John', 'age': 63, 'city': 'Eugene'}, {'name': 'Shekar', 'age': 18, 'city': 'San Francisco'}, {'name': 'Ryan', 'age': 21, 'city': 'Los Angeles'}]\n",
+      "name\n",
+      "[{'name': 'John', 'age': 63, 'city': 'Eugene'}, {'name': 'Risa', 'age': 18, 'city': 'New York'}, {'name': 'Ryan', 'age': 21, 'city': 'Los Angeles'}, {'name': 'Shekar', 'age': 18, 'city': 'San Francisco'}]\n",
+      "age\n",
+      "[{'name': 'Risa', 'age': 18, 'city': 'New York'}, {'name': 'Shekar', 'age': 18, 'city': 'San Francisco'}, {'name': 'Ryan', 'age': 21, 'city': 'Los Angeles'}, {'name': 'John', 'age': 63, 'city': 'Eugene'}]\n",
+      "city\n",
+      "[{'name': 'John', 'age': 63, 'city': 'Eugene'}, {'name': 'Ryan', 'age': 21, 'city': 'Los Angeles'}, {'name': 'Risa', 'age': 18, 'city': 'New York'}, {'name': 'Shekar', 'age': 18, 'city': 'San Francisco'}]\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "* Creator: Nighthawk Coding Society\n",
@@ -259,6 +280,140 @@
     "        print(key)\n",
     "        bubbleSort(list_of_people, key)  # sort list of people\n",
     "        print(list_of_people)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original:\n",
+      "['oak', 'pine', 'redwood', 'sequoia', 'birch', 'maple', 'sycamore', 'spruce', 'palm']\n",
+      "Sorted:\n",
+      "['birch', 'maple', 'oak', 'palm', 'pine', 'redwood', 'sequoia', 'spruce', 'sycamore']\n"
+     ]
+    }
+   ],
+   "source": [
+    "## New list: \n",
+    "\n",
+    "tree_species = [\"oak\", \"pine\", \"redwood\", \"sequoia\", \"birch\", \"maple\", \"sycamore\"]\n",
+    "\n",
+    "## Testing with given bubble sort (edited to work with this list): \n",
+    "\n",
+    "# bubble sorts a list of elements\n",
+    "def bubbleSort(lst):\n",
+    "    n = len(lst) - 1  # lists are indexed 0 to n-1, len is n\n",
+    "    \n",
+    "    # Traverse through the list with i index\n",
+    "    for i in range(n):\n",
+    "        swapped = False  # optimize code, so it exits if no swaps occur in the inner loop\n",
+    "\n",
+    "        # Inner traversal using j index\n",
+    "        for j in range(n-i):\n",
+    "            # Swap if the element at index j is greater than the element at index j+1\n",
+    "            if lst[j] > lst[j+1]:\n",
+    "                swapped = True\n",
+    "                lst[j], lst[j + 1] = lst[j + 1], lst[j]  # single line swap\n",
+    "         \n",
+    "        if not swapped:  # if no swaps occur in the inner pass, the list is sorted\n",
+    "            return  # exit the function\n",
+    "\n",
+    "# Main code\n",
+    "if __name__ == \"__main__\":\n",
+    "    tree_species = [\"oak\", \"pine\", \"redwood\", \"sequoia\", \"birch\", \"maple\", \"sycamore\", \"spruce\", \"palm\"]\n",
+    "\n",
+    "    # Print the original list\n",
+    "    print(\"Original:\")\n",
+    "    print(tree_species)\n",
+    "    \n",
+    "    # Sort the list using bubble sort\n",
+    "    bubbleSort(tree_species)\n",
+    "    \n",
+    "    # Print the sorted list\n",
+    "    print(\"Sorted:\")\n",
+    "    print(tree_species)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Given array is\n",
+      "oak pine redwood sequoia birch maple sycamore spruce palm \n",
+      "Sorted array is:\n",
+      "birch oak palm pine redwood sequoia maple sycamore spruce \n"
+     ]
+    }
+   ],
+   "source": [
+    "## Merge sort code taken from geek for geeks, and edited to create three sub-arrays instead of two, and then merge each one\n",
+    "## also edited to take words instead of integers\n",
+    "\n",
+    "def mergeSort(arr):\n",
+    "    if len(arr) > 1:\n",
+    "        mid1 = len(arr) // 3  # First sub-array division\n",
+    "        mid2 = mid1 * 2       # Second sub-array division\n",
+    "\n",
+    "        L1 = arr[:mid1]      # First sub-array\n",
+    "        L2 = arr[mid1:mid2]  # Second sub-array\n",
+    "        L3 = arr[mid2:]      # Third sub-array\n",
+    "\n",
+    "        mergeSort(L1)  # Sorting the first sub-array\n",
+    "        mergeSort(L2)  # Sorting the second sub-array\n",
+    "        mergeSort(L3)  # Sorting the third sub-array\n",
+    "\n",
+    "        # Merge the sorted subarrays\n",
+    "        i = j = k = 0\n",
+    "\n",
+    "        while i < len(L1) and j < len(L2) and k < len(L3):\n",
+    "            if L1[i] <= L2[j] and L1[i] <= L3[k]:\n",
+    "                arr[i + j + k] = L1[i]\n",
+    "                i += 1\n",
+    "            elif L2[j] <= L1[i] and L2[j] <= L3[k]:\n",
+    "                arr[i + j + k] = L2[j]\n",
+    "                j += 1\n",
+    "            else:\n",
+    "                arr[i + j + k] = L3[k]\n",
+    "                k += 1\n",
+    "\n",
+    "        while i < len(L1):\n",
+    "            arr[i + j + k] = L1[i]\n",
+    "            i += 1\n",
+    "\n",
+    "        while j < len(L2):\n",
+    "            arr[i + j + k] = L2[j]\n",
+    "            j += 1\n",
+    "\n",
+    "        while k < len(L3):\n",
+    "            arr[i + j + k] = L3[k]\n",
+    "            k += 1\n",
+    "\n",
+    "\n",
+    "def printList(arr):\n",
+    "    for i in range(len(arr)):\n",
+    "        print(arr[i], end=\" \")\n",
+    "    print()\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    tree_species = [\"oak\", \"pine\", \"redwood\", \"sequoia\", \"birch\", \"maple\", \"sycamore\", \"spruce\", \"palm\"]\n",
+    "    print(\"Given array is\", end=\"\\n\")\n",
+    "    printList(tree_species)\n",
+    "    mergeSort(tree_species)\n",
+    "    print(\"Sorted array is:\", end=\"\\n\")\n",
+    "    printList(tree_species)\n",
+    "\n",
+    "mergeSort(tree_species)\n"
    ]
   }
  ],
